# airflow-etl-api

./: .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yaml  docker_postgres_init.sql  pyproject.toml
.github/workflows/: black-action.yml  pylint-action.yml  pytest-action.yml
dags/: dag_etl_execute.py
src/: .env  api_call.py  config.py  create_table.py  populate_and_remove.py
src/streamlit/: Dockerfile  postgres_cli.py  requirements.txt  streamlit.py
src/streamlit/.streamlit/: config.toml
tests/: test_app.py
